--- a/jcommune-view/jcommune-web-view/src/main/resources/org/jtalks/jcommune/web/view/messages_en.properties
+++ b/jcommune-view/jcommune-web-view/src/main/resources/org/jtalks/jcommune/web/view/messages_en.properties
@@ -403,6 +403,7 @@ label.addReviewComment=Add comment
 label.administration=Administration
 label.administration.enter=Administration Mode
 label.administration.exit=Exit Administration
+label.administration.userGroups=User Groups
 label.forum.description=Forum description
 label.forum.title=Forum title
 label.titlePrefix=Prefix for the title of every page
@@ -504,3 +505,6 @@ label.not.logged.in.genericError=We're sorry, an error has occurred. Please refr
 label.sessionTimeout=Session timeout
 label.avatarMaxSize=Avatar max size
 label.emailNotification=Email notifications
+
+label.group.name=Group Name
+label.group.numberOfMembers=Number of Members
