--- a/jcommune-view/jcommune-web-view/src/main/resources/org/jtalks/jcommune/web/view/messages_en.properties
+++ b/jcommune-view/jcommune-web-view/src/main/resources/org/jtalks/jcommune/web/view/messages_en.properties
@@ -510,3 +510,6 @@ label.avatarMaxSize.hint=Avatar max size
 
 label.group.name=Name
 label.group.numberOfMembers=Number of Members
+label.group.creation=Create new
+label.group.placeholder.name=Group name
+label.group.placeholder.description=Group description
