--- a/jcommune-view/jcommune-web-view/src/main/resources/org/jtalks/jcommune/web/view/messages_es.properties
+++ b/jcommune-view/jcommune-web-view/src/main/resources/org/jtalks/jcommune/web/view/messages_es.properties
@@ -479,3 +479,6 @@ label.emailNotification=Email notifications
 
 label.group.name=Name
 label.group.numberOfMembers=Number of Members
+label.group.creation=Create new
+label.group.placeholder.name=Group name
+label.group.placeholder.description=Group description
