--- a/jcommune-view/jcommune-web-view/src/main/resources/org/jtalks/jcommune/web/view/messages_ru.properties
+++ b/jcommune-view/jcommune-web-view/src/main/resources/org/jtalks/jcommune/web/view/messages_ru.properties
@@ -502,3 +502,6 @@ label.avatarMaxSize.hint=\u041c\u0430\u043a\u0441\u0438\u043c\u0430\u043b\u044c\
 
 label.group.name=\u0418\u043c\u044f
 label.group.numberOfMembers=\u041a\u043e\u043b\u0438\u0447\u0435\u0441\u0442\u0432\u043e \u0443\u0447\u0430\u0441\u0442\u043d\u0438\u043a\u043e\u0432
+label.group.creation=\u0421\u043e\u0437\u0434\u0430\u0442\u044c \u043d\u043e\u0432\u0443\u044e
+label.group.placeholder.name=\u0418\u043c\u044f \u0433\u0440\u0443\u043f\u043f\u044b
+label.group.placeholder.description=\u041e\u043f\u0438\u0441\u0430\u043d\u0438\u0435 \u0433\u0440\u0443\u043f\u043f\u044b
